--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
-    "mongoose": "^5.13.5",
+    "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
     "source-map-support": "^0.5.21",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
     "eslint": "^7.32.0",
